--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Dumar Ojeda - dumarojeda@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.7.1"
   }
 }
